karpenter/add-karpenter-daemonset-priority-class/.chainsaw-test/patched-resource.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test
spec:
  selector:
    matchLabels:
      k8s-app: test
  template:
    metadata:
      labels:
        k8s-app: test
    spec:
      containers:
        - name: test
          image: busybox:1.35
      priorityClassName: system-node-critical
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test02
spec:
  selector:
    matchLabels:
      k8s-app: test
  template:
    metadata:
      labels:
        k8s-app: test
    spec:
      containers:
        - name: test
          image: busybox:1.35
      priorityClassName: system-node-critical
