karpenter/add-karpenter-daemonset-priority-class/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-karpenter-daemonset-priority-class
status:
  ready: true
