karpenter/add-karpenter-daemonset-priority-class/add-karpenter-daemonset-priority-class.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-karpenter-daemonset-priority-class
  annotations:
    policies.kyverno.io/title: Add priority class for DaemonSets to help Karpenter.
    policies.kyverno.io/subject: DaemonSet
    policies.kyverno.io/category: Karpenter, EKS Best Practices
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.7.3
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      When a DaemonSet is added to a cluster every node will get a new pod. There may not be 
      enough room for this on every node. Karpenter cannot provision extra nodes just for the 
      DaemonSet because the new pods are not scheduled the way regular pods are. It would require
      parallel scheduling logic that is not proper to Kubernetes. Therefore, eviction of regular 
      pods should happen instead. This can be achieved with the priority class system-node-critical.
spec:
  rules:
    - name: add-karpenter-daemonset-priority-class
      match:
        any:
          - resources:
              kinds:
                - DaemonSet
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                priorityClassName: system-node-critical
