karpenter/add-karpenter-daemonset-priority-class/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-karpenter-daemonset-priority-class
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-karpenter-daemonset-priority-class.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    finally:
    - sleep:
        duration: 10s
  - name: step-03
    try:
    - assert:
        file: patched-resource.yaml
